# mufi-3rdparty

./: CMakeLists.txt
.github/workflows/: mufi3-limux.yml  mufi3-macos.yml  mufi3-windows.yml
